# DZ_Django

./: main.py  pyproject.toml
src/: index.html
